--- a/user_reports/step4_plotting.Rmd
+++ b/user_reports/step4_plotting.Rmd
@@ -23,7 +23,7 @@ library(cowplot)
 #install.packages('ISOweek')
 library(ISOweek)
 library(scales)
-path <- "/Users/andrew/Desktop/Riff_Analytics_Internship/analyze-data/user_reports/Jordan/"
+path <- "/Users/andrew/Desktop/Riff_Analytics_Internship/analyze-data/user_reports/Beth/"
 ```
 
 ```{r}
@@ -34,7 +34,7 @@ nuser_avgs <- read_csv(paste0(path2,"avg_meeting_stats_w_nusers.csv"))
 ```
 
 
-# User Report for: Jordan
+# User Report for: Beth
 
 ### Overall Meeting Aggregates by Week and Month:
 ```{r}
@@ -100,8 +100,8 @@ g_m1 <- ggplot(monthoverall1, aes(x = time, y = average_speaking_time) ) +
      theme_minimal() + 
      scale_y_continuous(limits = c(0, 80))
 
-suppressWarnings(g_w1)
-suppressWarnings(g_m1)
+suppressWarnings(print(g_w1))
+suppressWarnings(print(g_m1))
 ```
 
 <div style="margin-bottom:100px;">
@@ -126,8 +126,8 @@ g_m2 <- ggplot(monthoverall1, aes(x = time, y = SU_interruptions) ) +
      theme_minimal() + 
      scale_y_continuous(limits = c(0, 2))
 
-suppressWarnings(g_w2)
-suppressWarnings(g_m2)
+suppressWarnings(print(g_w2))
+suppressWarnings(print(g_m2))
 ```
 
 <div style="margin-bottom:100px;">
@@ -152,8 +152,8 @@ g_m3 <- ggplot(monthoverall1, aes(x = time, y = SU_affirmations) ) +
      theme_minimal() + 
      scale_y_continuous(limits = c(0, 6))
 
-suppressWarnings(g_w3)
-suppressWarnings(g_m3)
+suppressWarnings(print(g_w3))
+suppressWarnings(print(g_m3))
 ```
 
 <div style="margin-bottom:100px;">
@@ -178,8 +178,8 @@ g_m4 <- ggplot(monthoverall1, aes(x = time, y = SU_influences) ) +
      theme_minimal() + 
      scale_y_continuous(limits = c(0, 6))
 
-suppressWarnings(g_w4)
-suppressWarnings(g_m4)
+suppressWarnings(print(g_w4))
+suppressWarnings(print(g_m4))
 ```
 
 <div style="margin-bottom:100px;">
@@ -204,8 +204,8 @@ g_m5 <- ggplot(monthoverall1, aes(x = time, y = SU_interrupted) ) +
      theme_minimal() + 
      scale_y_continuous(limits = c(0, 1))
 
-suppressWarnings(g_w5)
-suppressWarnings(g_m5)
+suppressWarnings(print(g_w5))
+suppressWarnings(print(g_m5))
 ```
 
 <div style="margin-bottom:100px;">
@@ -219,7 +219,7 @@ g_w6 <- ggplot(weekoverall1, aes(x = time, y = SU_affirmed) ) +
      geom_hline(yintercept = overall_avgs$affirmation_avg, linetype='dashed', color='black', size=1) +
      labs(x="Time",y="Average times Affirmed per minute",title = "Average Times Affirmed by Someone Else per minute by week") +
      theme_minimal() + 
-     scale_y_continuous(limits = c(0, 3)) +
+     scale_y_continuous(limits = c(0, 6)) +
      scale_x_date(date_breaks = "4 months", limits = c(plot.startdate,plot.enddate), date_minor_breaks = "1 month", date_labels = "%b %Y")
 
 g_m6 <- ggplot(monthoverall1, aes(x = time, y = SU_affirmed) ) +
@@ -228,10 +228,10 @@ g_m6 <- ggplot(monthoverall1, aes(x = time, y = SU_affirmed) ) +
      geom_hline(yintercept = overall_avgs$affirmation_avg, linetype='dashed', color='black', size=1) +
      labs(x="Time",y="Average times Affirmed per minute", title="Average Times Affirmed by Someone Else per minute by month") +
      theme_minimal() + 
-     scale_y_continuous(limits = c(0, 3))
+     scale_y_continuous(limits = c(0, 6))
 
-suppressWarnings(g_w6)
-suppressWarnings(g_m6)
+suppressWarnings(print(g_w6))
+suppressWarnings(print(g_m6))
 ```
 
 <div style="margin-bottom:100px;">
@@ -257,8 +257,8 @@ g_m7 <- ggplot(monthoverall1, aes(x = time, y = SU_influenced_by) ) +
      theme_minimal() + 
      scale_y_continuous(limits = c(0, 5))
 
-suppressWarnings(g_w7)
-suppressWarnings(g_m7)
+suppressWarnings(print(g_w7))
+suppressWarnings(print(g_m7))
 ```
 
 
@@ -331,8 +331,8 @@ g_m8 <- ggplot(monthoverall2, aes(x = time, y = average_speaking_time, color=wit
      theme_minimal() + 
      scale_y_continuous(limits = c(0, 80))
 
-suppressWarnings(g_w8)
-suppressWarnings(g_m8)
+suppressWarnings(print(g_w8))
+suppressWarnings(print(g_m8))
 ```
 
 <div style="margin-bottom:100px;">
@@ -357,8 +357,8 @@ g_m9 <- ggplot(monthoverall2, aes(x = time, y = SU_interruptions, color=with_top
      theme_minimal() + 
      scale_y_continuous(limits = c(0, 2))
 
-suppressWarnings(g_w9)
-suppressWarnings(g_m9)
+suppressWarnings(print(g_w9))
+suppressWarnings(print(g_m9))
 ```
 
 <div style="margin-bottom:100px;">
@@ -382,8 +382,8 @@ g_m10 <- ggplot(monthoverall2, aes(x = time, y = SU_affirmations, color=with_top
      labs(x="Time",y="Average Affirmations per minute", title="Average Times Affirming Someone Else per minute by month") +
      theme_minimal() + 
      scale_y_continuous(limits = c(0, 6))
-suppressWarnings(g_w10)
-suppressWarnings(g_m10)
+suppressWarnings(print(g_w10))
+suppressWarnings(print(g_m10))
 ```
 
 <div style="margin-bottom:100px;">
@@ -407,8 +407,8 @@ g_m11 <- ggplot(monthoverall2, aes(x = time, y = SU_influences, color=with_top_c
      labs(x="Time",y="Average Influences per minute", title="Average Times Influencing Someone Else per minute by month") +
      theme_minimal() + 
      scale_y_continuous(limits = c(0, 6))
-suppressWarnings(g_w11)
-suppressWarnings(g_m11)
+suppressWarnings(print(g_w11))
+suppressWarnings(print(g_m11))
 ```
 
 <div style="margin-bottom:100px;">
@@ -433,8 +433,8 @@ g_m12 <- ggplot(monthoverall2, aes(x = time, y = SU_interrupted, color=with_top_
      theme_minimal() + 
      scale_y_continuous(limits = c(0, 1))
 
-suppressWarnings(g_w12)
-suppressWarnings(g_m12)
+suppressWarnings(print(g_w12))
+suppressWarnings(print(g_m12))
 ```
 
 <div style="margin-bottom:100px;">
@@ -448,7 +448,7 @@ g_w13 <- ggplot(weekoverall2, aes(x = time, y = SU_affirmed, color=with_top_coll
      geom_hline(yintercept = overall_avgs$affirmation_avg, linetype='dashed', color='black', size=1) +
      labs(x="Time",y="Average times Affirmed per minute",title = "Average Times Affirmed by Someone Else per minute by week") +
      theme_minimal() + 
-     scale_y_continuous(limits = c(0, 3)) +
+     scale_y_continuous(limits = c(0, 5)) +
      scale_x_date(date_breaks = "4 months", limits = c(plot.startdate,plot.enddate), date_minor_breaks = "1 month", date_labels = "%b %Y")
 
 g_m13 <- ggplot(monthoverall2, aes(x = time, y = SU_affirmed, color=with_top_collaborator) ) +
@@ -457,10 +457,10 @@ g_m13 <- ggplot(monthoverall2, aes(x = time, y = SU_affirmed, color=with_top_col
      geom_hline(yintercept = overall_avgs$affirmation_avg, linetype='dashed', color='black', size=1) +
      labs(x="Time",y="Average times Affirmed per minute", title="Average Times Affirmed by Someone Else per minute by month") +
      theme_minimal() + 
-     scale_y_continuous(limits = c(0, 3))
+     scale_y_continuous(limits = c(0, 5))
 
-suppressWarnings(g_w13)
-suppressWarnings(g_m13)
+suppressWarnings(print(g_w13))
+suppressWarnings(print(g_m13))
 ```
 
 <div style="margin-bottom:100px;">
@@ -486,8 +486,8 @@ g_m14 <- ggplot(monthoverall2, aes(x = time, y = SU_influenced_by, color=with_to
      theme_minimal() + 
      scale_y_continuous(limits = c(0, 5))
 
-suppressWarnings(g_w14)
-suppressWarnings(g_m14)
+suppressWarnings(print(g_w14))
+suppressWarnings(print(g_m14))
 ```
 
 
@@ -776,7 +776,7 @@ w26 <- ggplot(weeks_2_user, aes(x = time, y = SU_affirmed)) +
      geom_hline(yintercept = user2_avgs$affirmation_avg, linetype='dashed', color='red', size=1) +
      labs(x="Time",y="Average Times Affirmed",title = "2-person meetings") +
      theme_minimal() + 
-     scale_y_continuous(limits = c(0, 3)) +
+     scale_y_continuous(limits = c(0, 5)) +
      scale_x_date(date_breaks = "4 months", limits = c(plot.startdate,plot.enddate), date_minor_breaks = "1 month", date_labels = "%b %Y")
 
 w346 <- ggplot(weeks_34_user, aes(x = time, y = SU_affirmed)) +
@@ -785,7 +785,7 @@ w346 <- ggplot(weeks_34_user, aes(x = time, y = SU_affirmed)) +
      geom_hline(yintercept = user34_avgs$affirmation_avg, linetype='dashed', color='green', size=1) +
      labs(x="Time",y="Average Times Affirmed",title = "Small groups (3-4 participants)") +
      theme_minimal() + 
-     scale_y_continuous(limits = c(0, 3)) +
+     scale_y_continuous(limits = c(0, 5)) +
      scale_x_date(date_breaks = "4 months", limits = c(plot.startdate,plot.enddate), date_minor_breaks = "1 month", date_labels = "%b %Y")
 
 w576 <- ggplot(weeks_57_user, aes(x = time, y = SU_affirmed)) +
@@ -794,7 +794,7 @@ w576 <- ggplot(weeks_57_user, aes(x = time, y = SU_affirmed)) +
      geom_hline(yintercept = user57_avgs$affirmation_avg, linetype='dashed', color='blue', size=1) +
      labs(x="Time",y="Average Times Affirmed",title = "Larger groups (5-7 participants)") +
      theme_minimal() + 
-     scale_y_continuous(limits = c(0, 3)) +
+     scale_y_continuous(limits = c(0, 5)) +
      scale_x_date(date_breaks = "4 months", limits = c(plot.startdate,plot.enddate), date_minor_breaks = "1 month", date_labels = "%b %Y")
 
 w86 <- ggplot(weeks_8_user, aes(x = time, y = SU_affirmed)) +
@@ -803,7 +803,7 @@ w86 <- ggplot(weeks_8_user, aes(x = time, y = SU_affirmed)) +
      geom_hline(yintercept = user8_avgs$affirmation_avg, linetype='dashed', color='purple', size=1) +
      labs(x="Time",y="Average Times Affirmed",title = "Very Large groups (8+ participants)") +
      theme_minimal() + 
-     scale_y_continuous(limits = c(0, 3)) +
+     scale_y_continuous(limits = c(0, 5)) +
      scale_x_date(date_breaks = "4 months", limits = c(plot.startdate,plot.enddate), date_minor_breaks = "1 month", date_labels = "%b %Y")
 
 suppressWarnings(plot_grid(w26,w346,w576,w86,ncol=2, nrow=2))
